Update and rename jekyll-build.yml to jekyll-now-page-update.yml
Should now run every morning building my page again. Code from ChatGPT.

--- a/.github/workflows/jekyll-now-page-update.yml
+++ b/.github/workflows/jekyll-now-page-update.yml
@@ -1,7 +1,8 @@
-name: One-Time Jekyll Build
+name: Update /now Page
 
 on:
-  workflow_dispatch: # Allows you to manually trigger the workflow
+  schedule:
+    - cron: '0 12 * * *' # 4:00 AM PST (Standard Time)
 
 jobs:
   build:
