--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,6 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
+# ----------------------------------
+# Site Information
+# ----------------------------------
 
 title: VSP.ink
 description: >- # this means to ignore newlines until "baseurl:"
@@ -26,12 +10,22 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  campjacob
 
-# Build settings
+# ----------------------------------
+# Build Settings
+# ----------------------------------
+
 plugins:
   - jekyll-feed
 
+# ----------------------------------
 # Conversion
+# ----------------------------------
+
 markdown: kramdown
+
+# ----------------------------------
+# Collections
+# ----------------------------------
 
 collections:
   daily:
@@ -43,6 +37,13 @@ collections:
   embed:
     output: true
     permalink: /:collection/:name
+  podcasts:
+    output: true
+    permalink: /:collection/:path/
+
+# ----------------------------------
+# Defaults
+# ----------------------------------
 
 defaults:
   - scope:
@@ -60,6 +61,12 @@ defaults:
       type: embed
     values:
       layout: "embed"
+  - scope:
+      path: ""
+      type: podcasts
+    values:
+      layout: reading-support
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
