--- a/.github/workflows/update-quotes.yml
+++ b/.github/workflows/update-quotes.yml
@@ -45,6 +45,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-          git add _data/quotes.json
+          git add _data/quote.json
           git commit -m "Update quotes.json (daily)"
           git push
